--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Bayesian linear regression"
-author: "Your Name"
+author: "Shahab Kazemi"
 date: "`r Sys.Date()`"
 output:
   md_document:
